added akash roy

--- a/index.html
+++ b/index.html
@@ -408,6 +408,21 @@
                         </div>
 						<div class="card">
                             <center>
+                                <img src="./sources/imgs/akash_roy.jpeg" alt="">
+                                <h1>Akash Roy</h1>
+                                <h2>HITK ECE 4th</h2>
+                                <hr>
+                                <p class="team-links">
+                                    <a href="" target="_blank"><i class="fab fa-facebook"></i></a>
+                                    &nbsp;
+                                    <!--<a href="http://www.instagram.com/suparno_tito" target="_blank"><i class="fab fa-instagram"></i></a>-->
+                                    &nbsp;
+                                    <!-- <a href="https://www.linkedin.com/in/suparno-banerjee-ba7960107" target="_blank"><i class="fab fa-linkedin"></i></a>-->
+                                </p>
+                            </center>
+                        </div>
+						<div class="card">
+                            <center>
                                 <img src="./sources/imgs/logo/logo-min.png" alt="">
                                 <h1>Debapriya Sarkar</h1>
                                 <h2>HITK AEIE 4th</h2>
@@ -530,21 +545,6 @@
                             <center>
                                 <img src="./sources/imgs/logo/logo-min.png" alt="">
                                 <h1>Swarochish Goswami</h1>
-                                <h2>HITK ECE 4th</h2>
-                                <hr>
-                                <p class="team-links">
-                                    <a href="" target="_blank"><i class="fab fa-facebook"></i></a>
-                                    &nbsp;
-                                    <!--<a href="http://www.instagram.com/suparno_tito" target="_blank"><i class="fab fa-instagram"></i></a>-->
-                                    &nbsp;
-                                    <!-- <a href="https://www.linkedin.com/in/suparno-banerjee-ba7960107" target="_blank"><i class="fab fa-linkedin"></i></a>-->
-                                </p>
-                            </center>
-                        </div>
-						<div class="card">
-                            <center>
-                                <img src="./sources/imgs/logo/logo-min.png" alt="">
-                                <h1>Akash Roy</h1>
                                 <h2>HITK ECE 4th</h2>
                                 <hr>
                                 <p class="team-links">
