--- a/index.html
+++ b/index.html
@@ -892,6 +892,80 @@
                         </div>
                     </div>
 		        </div>
+	<div class="row">
+                    <div class="team-adhoc col-lg-12">
+                        <br><br><br><br>
+                        <hr>
+                        <h1>Administration</h1>
+                        <hr>
+                        <br>
+                    </div>
+
+                    <div class="adhoc col-lg-12">
+                        <div class="card">
+                            <center>
+                                <img src="./sources/imgs/logo/logo-min.png" alt="">
+                                <h1>Prof.(Dr.)Pranay Chaudhuri</h1>
+                                <h2>Principal</h2>
+                                <hr>
+                               <!-- <p class="team-links">
+                                    <a href="www.facebook.com/rounak.tikadar"><i class="fab fa-facebook"></i></a>
+                                    &nbsp;
+                                    <a href="www.instagram.com/lyadh_god" target="_blank"><i class="fab fa-instagram"></i></a>
+                                    &nbsp;
+                                </p>-->
+                            </center>
+                        </div>
+                        <div class="card">
+                            <center>
+                                <img src="./sources/imgs/logo/logo-min.png" alt="">
+                                <h1>Mr.Arvind Srivastava</h1>
+                                <h2>Joint Registrar</h2>
+                                <hr>
+                               <!-- <p class="team-links">
+                                    <a href="https://www.facebook.com/soham.d.basu?sk=wall" target="_blank"><i class="fab fa-facebook"></i></i></a>
+                                    &nbsp;
+                                </p>-->
+                            </center>
+                        </div>
+                        <div class="card">
+                            <center>
+                                <img src="./sources/imgs/logo/logo-min.png" alt="">
+                                <h1>Prof.(Dr.)Sandip Chatterjee</h1>
+                                <h2>ADHOC COMMITTEE</h2>
+                                <hr>
+                               <!-- <p class="team-links">
+                                    <a href="https://www.facebook.com/saptak.dey" target="_blank"><i class="fab fa-facebook"></i></a>
+                                    &nbsp;
+                                </p>-->
+                            </center>
+                        </div>
+                        <div class="card">
+                            <center>
+                                <img src="./sources/imgs/logo/logo-min.png" alt="">
+                                <h1>Prof.(Dr.)Nirmalya Prasun Nayak</h1>
+                                <h2>ADHOC COMMITTEE</h2>
+                                <hr>
+                               <!-- <p class="team-links">
+                                    <a href="https://www.facebook.com/saptak.dey" target="_blank"><i class="fab fa-facebook"></i></a>
+                                    &nbsp;
+                                </p>-->
+                            </center>
+                        </div>
+						 <div class="card">
+                            <center>
+                                <img src="./sources/imgs/logo/logo-min.png" alt="">
+                                <h1>Cdr.(Retd.) S.Dey</h1>
+                                <h2>Campus Administrator</h2>
+                                <hr>
+                               <!-- <p class="team-links">
+                                    <a href="https://www.facebook.com/saptak.dey" target="_blank"><i class="fab fa-facebook"></i></a>
+                                    &nbsp;
+                                </p>-->
+                            </center>
+                        </div>
+                    </div>
+		        </div>
 
             </div>
         </div>
