--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                         </br></br><i class="fas fa-heart"></i>
                     </h1>
                     </br>
-                    <a href="./guests.html" target="_blank"><button>Get Schedule</button></a>
+                    <a href="./guests.html" target="_blank"><button>Know More</button></a>
                 </div>
                 <div class="event-card">
                     <h1>Cultural Events
@@ -660,45 +660,6 @@
                     <div class="team-adhoc col-lg-12">
                         <br><br><br><br>
                         <hr>
-                        <h1>Public Relations Team</h1>
-                        <hr>
-                        <br>
-                    </div>
-
-                    <div class="adhoc col-lg-12">
-                        <div class="card">
-                            <center>
-                                <img src="./sources/imgs/jagrat.jpeg" alt="">
-                                <h1>Jagrat Wadhwa</h1>
-                                <h2>HITK ECE 4th</h2>
-                                <hr>
-                                <p class="team-links">
-                                    <a href="https://m.facebook.com/profile.php?id=100001498099311&ref=content_filter" target="_blank"><i class="fab fa-facebook"></i></a>
-                                    &nbsp;
-                                    <a href="https://www.instagram.com/jagratwadhwa21/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a>
-                                </p>
-                            </center>
-                        </div>
-                        <div class="card">
-                                <center>
-                                    <img src="./sources/imgs/syed.jpeg" alt="">
-                                    <h1>Syed Irfan Ahmad</h1>
-                                    <h2>HITK CE 4th</h2>
-                                    <hr>
-                                    <p class="team-links">
-                                        <a href="https://m.facebook.com/profile.php?id=100003155495177&ref=content_filter" target="_blank"><i class="fab fa-facebook"></i></a>
-                                        &nbsp;
-                                        <a href="https://www.instagram.com/syedirfanahmad/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a>
-                                    </p>
-                                </center>
-                            </div>
-                        </div>
-                </div>
-
-                <div class="row">
-                    <div class="team-adhoc col-lg-12">
-                        <br><br><br><br>
-                        <hr>
                         <h1>Technical Team</h1>
                         <hr>
                         <br>
@@ -803,7 +764,45 @@
                             </center>
                         </div>
                     </div>
+                </div>
 
+                <div class="row">
+                    <div class="team-adhoc col-lg-12">
+                        <br><br><br><br>
+                        <hr>
+                        <h1>Public Relations Team</h1>
+                        <hr>
+                        <br>
+                    </div>
+
+                    <div class="adhoc col-lg-12">
+                        <div class="card">
+                            <center>
+                                <img src="./sources/imgs/jagrat.jpeg" alt="">
+                                <h1>Jagrat Wadhwa</h1>
+                                <h2>HITK ECE 4th</h2>
+                                <hr>
+                                <p class="team-links">
+                                    <a href="https://m.facebook.com/profile.php?id=100001498099311&ref=content_filter" target="_blank"><i class="fab fa-facebook"></i></a>
+                                    &nbsp;
+                                    <a href="https://www.instagram.com/jagratwadhwa21/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a>
+                                </p>
+                            </center>
+                        </div>
+                        <div class="card">
+                                <center>
+                                    <img src="./sources/imgs/syed.jpeg" alt="">
+                                    <h1>Syed Irfan Ahmad</h1>
+                                    <h2>HITK CE 4th</h2>
+                                    <hr>
+                                    <p class="team-links">
+                                        <a href="https://m.facebook.com/profile.php?id=100003155495177&ref=content_filter" target="_blank"><i class="fab fa-facebook"></i></a>
+                                        &nbsp;
+                                        <a href="https://www.instagram.com/syedirfanahmad/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a>
+                                    </p>
+                                </center>
+                            </div>
+                        </div>
                 </div>
 
 				<div class="row">
@@ -892,7 +891,8 @@
                         </div>
                     </div>
 		        </div>
-	<div class="row">
+
+                <!--div class="row">
                     <div class="team-adhoc col-lg-12">
                         <br><br><br><br>
                         <hr>
@@ -908,12 +908,12 @@
                                 <h1>Prof.(Dr.)Pranay Chaudhuri</h1>
                                 <h2>Principal</h2>
                                 <hr>
-                               <!-- <p class="team-links">
+                                <p class="team-links">
                                     <a href="www.facebook.com/rounak.tikadar"><i class="fab fa-facebook"></i></a>
                                     &nbsp;
                                     <a href="www.instagram.com/lyadh_god" target="_blank"><i class="fab fa-instagram"></i></a>
                                     &nbsp;
-                                </p>-->
+                                </p>
                             </center>
                         </div>
                         <div class="card">
@@ -922,10 +922,10 @@
                                 <h1>Mr.Arvind Srivastava</h1>
                                 <h2>Joint Registrar</h2>
                                 <hr>
-                               <!-- <p class="team-links">
+                                <p class="team-links">
                                     <a href="https://www.facebook.com/soham.d.basu?sk=wall" target="_blank"><i class="fab fa-facebook"></i></i></a>
                                     &nbsp;
-                                </p>-->
+                                </p>
                             </center>
                         </div>
                         <div class="card">
@@ -934,10 +934,10 @@
                                 <h1>Prof.(Dr.)Sandip Chatterjee</h1>
                                 <h2>ADHOC COMMITTEE</h2>
                                 <hr>
-                               <!-- <p class="team-links">
+                                <p class="team-links">
                                     <a href="https://www.facebook.com/saptak.dey" target="_blank"><i class="fab fa-facebook"></i></a>
                                     &nbsp;
-                                </p>-->
+                                </p>
                             </center>
                         </div>
                         <div class="card">
@@ -946,26 +946,26 @@
                                 <h1>Prof.(Dr.)Nirmalya Prasun Nayak</h1>
                                 <h2>ADHOC COMMITTEE</h2>
                                 <hr>
-                               <!-- <p class="team-links">
+                                <p class="team-links">
                                     <a href="https://www.facebook.com/saptak.dey" target="_blank"><i class="fab fa-facebook"></i></a>
                                     &nbsp;
-                                </p>-->
+                                </p>
                             </center>
                         </div>
-						 <div class="card">
+						<div class="card">
                             <center>
                                 <img src="./sources/imgs/logo/logo-min.png" alt="">
                                 <h1>Cdr.(Retd.) S.Dey</h1>
                                 <h2>Campus Administrator</h2>
                                 <hr>
-                               <!-- <p class="team-links">
+                                <p class="team-links">
                                     <a href="https://www.facebook.com/saptak.dey" target="_blank"><i class="fab fa-facebook"></i></a>
                                     &nbsp;
-                                </p>-->
+                                </p>
                             </center>
                         </div>
                     </div>
-		        </div>
+		        </div-->
 
             </div>
         </div>
