--- a/guests.html
+++ b/guests.html
@@ -20,7 +20,7 @@
     <link href="https://fonts.googleapis.com/css?family=Cardo|Playfair+Display:400,700,900" rel="stylesheet">
 
     <link rel="stylesheet" href="./css/style_g.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.min.css">
 
     <script>
         // to hide the loader
