--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <li><a href="#gal-head">Gallery</a></li>
                         <li><a href="#team-sec">Our Team</a></li>
                         <li><a href="#details-contact">Contact</a></li>
-                        <li><a href="http://61.12.70.61:615/HeritageUtsav19EvtRegd.aspx">Registration</a></li>
+                        <!--li><a href="http://61.12.70.61:615/HeritageUtsav19EvtRegd.aspx">Registration</a></li-->
                         <p id="nav-copyright">© 2019 HU19 All Rights Reserved</p>
                     </ul>
                 </div>
@@ -161,7 +161,8 @@
 
             <div class="col-lg-12 event-buttons">
                 <center>
-                    <a class="register-button" href="http://61.12.70.61:615/HeritageUtsav19EvtRegd.aspx" target="_blank"><button>Register Here</button></a>
+                    <a class="register-button"><button>Online Registrations Closed.</br>
+                        Report On-Site for further Registrations. </button></a>
                     <br><br><br>
                     <a class="brochure-button" href="./sources/Heritage Utsav 2019 Brochure.pdf" download><button>Download Brochure</button></a>
                 </center>
@@ -790,19 +791,32 @@
                             </center>
                         </div>
                         <div class="card">
-                                <center>
-                                    <img src="./sources/imgs/syed.jpeg" alt="">
-                                    <h1>Syed Irfan Ahmad</h1>
-                                    <h2>HITK CE 4th</h2>
-                                    <hr>
-                                    <p class="team-links">
-                                        <a href="https://m.facebook.com/profile.php?id=100003155495177&ref=content_filter" target="_blank"><i class="fab fa-facebook"></i></a>
-                                        &nbsp;
-                                        <a href="https://www.instagram.com/syedirfanahmad/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a>
-                                    </p>
-                                </center>
-                            </div>
+                            <center>
+                                <img src="./sources/imgs/syed.jpeg" alt="">
+                                <h1>Syed Irfan Ahmad</h1>
+                                <h2>HITK CE 4th</h2>
+                                <hr>
+                                <p class="team-links">
+                                    <a href="https://m.facebook.com/profile.php?id=100003155495177&ref=content_filter" target="_blank"><i class="fab fa-facebook"></i></a>
+                                    &nbsp;
+                                    <a href="https://www.instagram.com/syedirfanahmad/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a>
+                                </p>
+                            </center>
                         </div>
+                        <div class="card">
+                            <center>
+                                <img src="./sources/imgs/Souradeep Biswas.jpeg" alt="">
+                                <h1>Souradeep Biswas</h1>
+                                <h2>HITK BT 3rd</h2>
+                                <hr>
+                                <p class="team-links">
+                                    <a href=""><i class="fab fa-facebook"></i></a>
+                                    &nbsp;
+                                    <a href=""><i class="fab fa-instagram"></i></a>
+                                </p>
+                            </center>
+                        </div>
+                    </div>
                 </div>
 
 				<div class="row">
@@ -977,6 +991,8 @@
                 <br><br><br>
                 <div class="follow-icons">
                     <p>
+                        <a href="https://play.google.com/store/apps/details?id=com.college.heritageutsav" target="_blank"><i class="fab fa-google-play"></i></a>
+                        &nbsp;
                         <a href="https://www.facebook.com/heritageutsav2k19/" target="_blank"><i class="fab fa-facebook"></i></a>
                         &nbsp;
                         <a href="https://www.instagram.com/heritageutsav2019" target="_blank"><i class="fab fa-instagram"></i></a>
